[metadata]
name = ray
summary = A hobby Programming Language
author = Sean Mooney
author-email = sean@seanmooney.info
home-page = seanmooney.info
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    ray
[entry_points]